[package]
name = "zdftext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-escape = "0.2.13"
html_parser = "0.7.0"
once_cell = "1.18.0"
owo-colors = "3.5.0"
reqwest = "0.11.22"
tokio = { version = "1.32.0", features = ["sync", "macros"] }
