[package]
name = "zdftext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-escape = "0.2.13"
html_parser = "0.7.0"
once_cell = "1.18.0"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = "0.11.22"
termion = "2.0.1"
tokio = { version = "1.44.2", features = ["macros"] }
